--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "lint:css": "stylelint '**/*.css'",
+    "build": "tsc && vite build",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.7",
@@ -41,7 +41,7 @@
     "globals": "^15.9.0",
     "prettier": "^3.3.0",
     "react-toastify": "^10.0.5",
-    "sass-embedded": "^1.79.4",
+    "sass": "^1.79.4",
     "stylelint": "^16.0.0-3",
     "stylelint-config-standard": "^36.0.1",
     "stylelint-config-standard-scss": "^13.1.0",
